# zhelper

./: .gitignore  Cargo.toml  README.md  setup.sh
src/: app.rs  audio.rs  battery.rs  config.rs  cpu.rs  display.rs  gpu.rs  main.rs  system.rs  sysutil.rs
