[package]
name = "zhelper"
version = "0.2.0"
edition = "2021"
description = "ZHelper — ASUS ROG laptop battery, CPU & GPU TUI for Linux"
license = "MIT"
repository = "https://github.com/Ichihiroy/ghelper-for-linux"
homepage = "https://github.com/Ichihiroy/ghelper-for-linux"
readme = "README.md"
keywords = ["asus", "rog", "battery", "tui", "linux"]
categories = ["command-line-utilities"]
exclude = [".github/*", "target/*"]

[[bin]]
name = "zhelper"
path = "src/main.rs"

[dependencies]
ratatui   = "0.29"
crossterm = "0.28"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
dirs        = "5"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
